# AutoTube

./: .gitignore  Start AutoTube.command  Start ComfyUI.command  Stop AutoTube.command  start.sh  start_gui.py  stop.sh
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  supabase_schema.sql
backend/app/: celery_app.py  config.py  dependencies.py  main.py  supabase_client.py
backend/app/models/: __init__.py  api_key.py  project.py  user.py
backend/app/routers/: api_keys.py  assets.py  pipeline.py  projects.py  users.py
backend/app/schemas/: api_key.py  project.py
backend/app/services/: encryption.py  pipeline.py  progress.py  step_dispatcher.py  storage.py  task_callback.py  user_settings.py
backend/app/workers/: __init__.py  audio_postprocess.py  bgm.py  comfyui_client.py  comfyui_video_workflow.py  comfyui_workflow.py  images.py  metadata.py  script.py  seo.py  sns.py  subtitle.py  thumbnail.py  tts.py  video.py  video_gen.py  youtube_upload.py
backend/tests/: conftest.py  test_api_keys.py  test_comfyui_client.py  test_comfyui_video_workflow.py  test_comfyui_workflow.py  test_encryption.py  test_images.py  test_models.py  test_pipeline.py  test_pipeline_api.py  test_projects.py  test_script.py  test_storage.py  test_video_gen.py  test_worker_images.py  test_worker_metadata.py  test_worker_script.py  test_worker_subtitle.py  test_worker_tts.py  test_worker_video.py
docs/plans/: 2026-03-26-autotube-design.md  2026-03-26-autotube-phase1-plan.md  (+1 more)
frontend/: .gitignore  package-lock.json  package.json
scripts/: setup_comfyui.sh
(+32 files in other folders)
